# GenomeFlow-AI

./: CMakeLists.txt  LICENSE  README.md  structure.txt
ml/: app.py  predict.py  preprocess.py  pyproject.toml  train.py
ml/data/: clone_dataset.csv  processed_dataset.csv
ml/models/: xgboost_model.joblib
simulator/benchmark/: cpu_benchmark.cpp  cpu_benchmark.md  cpu_openMP_benchmark.md
simulator/cpu/: clone.cpp  clone_stats.cpp  dataset.cpp  fitness.cpp  main.cpp  mutation.cpp  selection.cpp  simulation.cpp
simulator/include/: clone.hpp  clone_stats.hpp  dataset.hpp  fitness.hpp  genome.hpp  mutation.hpp  population.hpp  selection.hpp  simulation.hpp
